added modals on front page

--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: items
+#
+#  id          :integer          not null, primary key
+#  title       :string(255)
+#  url         :string(255)
+#  description :string(255)
+#  author      :string(255)
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  topic_id    :topic_name
+#  slug        :string(255)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
