--- a/test/fixtures/topics.yml
+++ b/test/fixtures/topics.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: topics
+#
+#  id          :integer          not null, primary key
+#  name        :string(255)
+#  description :string(255)
+#  author      :string(255)
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  slug        :string(255)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
